<resources>
    <string name="app_name">Quiz Master</string>

    <string name="exit">End Quiz</string>
    <string name="skip">Skip Question</string>
    <string name="answer">Answer and Next</string>
    <string name="option1">option1</string>
    <string name="option2">option2</string>
    <string name="option3">option3</string>
    <string name="option4">option4</string>
    <string name="initial_time">00:00:00</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="menu_option_1">Start History Quiz</string>
    <string name="menu_option_2">Start Math Quiz</string>
    <string name="menu_option_3">Settings</string>
    <string name="menu_option_4">Statistics</string>
    <string name="fragment_1_title">Fragment 1</string>
    <string name="fragment_2_title">Fragment 2</string>
    <string name="fragment_3_title">Fragment 3</string>
    <string name="fragment_4_title">Fragment 4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Application Settings</string>
    <string name="title_activity_statistics">Quiz Statistics</string>

    <!-- Preferences Section Titles -->
    <string name="game_play_header">Game Play</string>
    <string name="appearance_header">Appearance</string>

    <!-- Game Play Preferences -->
    <string name="save_game_title">Save ongoing quiz on close</string>

    <!-- Appearance Preferences -->
    <string name="dark_theme_title">Dark theme</string>
    <string name="title_activity_history">history</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

    <!-- Statistics Titles -->
    <string name="statistics_radio_history">History</string>
    <string name="statistics_radio_math">Math</string>
    <string name="statistics_left_last">Last day</string>
    <string name="statistics_left_all">All time</string>
    <string name="statistics_top_quizzes">Quizzes</string>
    <string name="statistics_top_solved">Solved Ratio</string>
    <string name="statistics_top_avgTime">Ave. Time</string>
    <string name="statistics_top_avgScore">Ave. Score</string>
    <string name="statistics_btn_reset">RESET</string>
    <string name="statistics_high_score">High Score</string>


    <string name="notification_message">Keep on playing Quiz! You know you want to!</string>
    <string name="question_1">Question 1</string>
    <string name="write_answer">Write answer</string>
    <string name="question_result">Question result</string>
</resources>