<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".HistoryQuizActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewQuestionNumber"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="30dp"
            android:gravity="center"
            android:text="Question 1"
            android:textColor="#E91E63"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnTime"
            android:layout_width="113dp"
            android:layout_height="70dp"
            android:layout_gravity="left"
            android:layout_margin="50dp"
            android:backgroundTint="#F3EAA0"
            android:text="1:00" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="79dp"
            android:layout_gravity="right"
            android:layout_marginLeft="50dp"
            app:srcCompat="@drawable/question" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="315dp"
        android:layout_height="170dp"
        android:layout_gravity="center"
        android:background="#EFD68C"
        android:gravity="center"
        android:text="history"
        android:textAlignment="center"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rdbOption1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:text="@string/option1" />

            <RadioButton
                android:id="@+id/rdbOption2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/option2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rdbOption3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:text="@string/option3" />

            <RadioButton
                android:id="@+id/rdbOption4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/option4" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSkip"
            style="@style/ButtonWith3DText"
            android:layout_width="131dp"
            android:layout_height="65dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#D093DA"
            android:text="@string/skip" />

        <Button
            android:id="@+id/btnAnswer"
            style="@style/ButtonWith3DText"
            android:layout_width="131dp"
            android:layout_height="65dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#CF79DD"
            android:text="@string/answer" />
    </LinearLayout>

        <Button
            android:id="@+id/btnEnd"
            style="@style/ButtonWith3DText"
            android:layout_width="132dp"
            android:layout_height="59dp"
            android:layout_gravity="center"
            android:backgroundTint="#B39DDC"
            android:text="@string/exit" />

</LinearLayout>