<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mathquiz">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="146dp"
        android:text="Question 1"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="114dp"
        android:layout_height="101dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="340dp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnTime"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sad" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="326dp"
        android:layout_height="179dp"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="42dp"
        android:background="#EFD68C"
        android:text="math"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btnTime"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="389dp"
        android:backgroundTint="#F3EAA0"
        android:text="1:00"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="258dp"
        android:layout_height="68dp"
        android:layout_marginBottom="35dp"
        android:ems="10"
        android:hint="Write answer"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button2"
        style="@style/ButtonWith3DText"
        android:layout_width="131dp"
        android:layout_height="65dp"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="164dp"
        android:backgroundTint="#CF79DD"
        android:text="@string/answer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTime" />

    <Button
        android:id="@+id/button3"
        style="@style/ButtonWith3DText"
        android:layout_width="131dp"
        android:layout_height="65dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="166dp"
        android:backgroundTint="#D093DA"
        android:text="@string/skip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/button4"
        style="@style/ButtonWith3DText"
        android:layout_width="190dp"
        android:layout_height="71dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="65dp"
        android:backgroundTint="#B39DDC"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>